--- a/index.html
+++ b/index.html
@@ -5,97 +5,287 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DAR-UL-HUDA COACHING CENTER</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Amiri&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Amiri&family=Poppins:wght@300;400;600&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{
-  font-family:'Poppins',sans-serif;
-  background:linear-gradient(180deg,#f4f8f6,#eef5f1);
-  color:#333;
-}
-header{
-  background:linear-gradient(135deg,#0f5132,#1fa36b);
-  color:#fff;
-  text-align:center;
-  padding:70px 20px;
-  position:relative;
-}
-header::after{
-  content:"☪";
-  position:absolute;
-  font-size:160px;
-  opacity:.06;
-  bottom:-20px;
-  right:-10px;
-}
-header h1{font-size:38px}
-header h2{font-family:'Amiri',serif;font-size:30px}
-header p{margin-top:8px}
-
-section{padding:60px 20px;max-width:1100px;margin:auto}
-.section-title{text-align:center;margin-bottom:35px}
-.section-title h2{color:#0f5132;font-size:30px}
-.section-title span{font-family:'Amiri',serif;color:#1fa36b}
-
-.cards{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:25px;
-}
-.card{
-  background:#fff;
-  padding:28px;
-  border-radius:18px;
-  box-shadow:0 12px 30px rgba(0,0,0,.08);
+:root {
+  --primary: #0f5132;
+  --secondary: #1fa36b;
+  --accent: #198754;
+  --neon: #00ff88;
+  --light: #f4f8f6;
+  --lighter: #eef5f1;
+  --white: #fff;
+  --text: #333;
+  --shadow: rgba(0, 0, 0, 0.08);
+  --glow: 0 0 20px rgba(31, 163, 107, 0.5);
+  --transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
-ul{list-style:none}
-ul li{margin:6px 0}
-ul li::before{content:"✔ ";color:#1fa36b;font-weight:bold}
+* { margin: 0; padding: 0; box-sizing: border-box; }
 
-.form-box{
-  background:#fff;
-  padding:35px;
-  border-radius:22px;
-  box-shadow:0 15px 40px rgba(0,0,0,.12);
-  max-width:850px;
-  margin:auto;
+body {
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(180deg, var(--light), var(--lighter));
+  color: var(--text);
+  line-height: 1.6;
+  overflow-x: hidden;
 }
-input,select{
-  width:100%;
-  padding:12px 14px;
-  margin-bottom:14px;
-  border-radius:12px;
-  border:1px solid #ccc;
-}
-button{
-  width:100%;
-  padding:14px;
-  border:none;
-  border-radius:14px;
-  background:linear-gradient(135deg,#198754,#1fa36b);
-  color:#fff;
-  font-size:16px;
-}
-button:disabled{opacity:.5}
 
-#qrBox{
-  display:none;
-  text-align:center;
-  margin:20px 0;
-  padding:20px;
-  background:#eaf7f1;
-  border-radius:16px;
+header {
+  background: linear-gradient(135deg, var(--primary), var(--secondary));
+  color: var(--white);
+  text-align: center;
+  padding: 70px 20px;
+  position: relative;
+  overflow: hidden;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 }
-#feeText{font-weight:600;color:#0f5132;margin-bottom:10px}
 
-footer{
-  background:linear-gradient(135deg,#198754,#1fa36b);
-  color:#fff;
-  padding:30px 15px;
-  text-align:center;
-  line-height:1.8;
+header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(circle, rgba(255,255,255,0.1) 1px, transparent 1px);
+  background-size: 20px 20px;
+  opacity: 0.3;
+}
+
+header::after {
+  content: "☪";
+  position: absolute;
+  font-size: 160px;
+  opacity: 0.06;
+  bottom: -20px;
+  right: -10px;
+  animation: float 6s ease-in-out infinite, pulse 3s ease-in-out infinite alternate;
+}
+
+@keyframes float { 0%, 100% { transform: translateY(0) rotate(0deg); } 50% { transform: translateY(-10px) rotate(5deg); } }
+@keyframes pulse { from { filter: drop-shadow(0 0 10px rgba(255,255,255,0.2)); } to { filter: drop-shadow(0 0 20px rgba(255,255,255,0.4)); } }
+
+header h1 {
+  font-size: 38px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  font-family: 'Orbitron', monospace;
+  text-shadow: 0 0 20px rgba(255,255,255,0.5);
+}
+
+header h2 {
+  font-family: 'Amiri', serif;
+  font-size: 30px;
+  margin-bottom: 8px;
+  text-shadow: 0 0 15px rgba(255,255,255,0.3);
+}
+
+header p {
+  margin-top: 8px;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+section {
+  padding: 60px 20px;
+  max-width: 1100px;
+  margin: auto;
+  position: relative;
+}
+
+.section-title h2 {
+  color: var(--primary);
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 35px;
+  position: relative;
+  display: inline-block;
+}
+
+.section-title h2::after {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 3px;
+  background: linear-gradient(90deg, var(--secondary), var(--neon));
+  transition: width 0.5s ease;
+}
+
+.section-title h2:hover::after { width: 100%; }
+
+.section-title span { font-family: 'Amiri', serif; color: var(--secondary); }
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 25px;
+}
+
+.card {
+  background: var(--white);
+  padding: 28px;
+  border-radius: 18px;
+  box-shadow: 0 12px 30px var(--shadow);
+  transition: var(--transition);
+  border: 1px solid transparent;
+  backdrop-filter: blur(10px);
+  position: relative;
+  overflow: hidden;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(31, 163, 107, 0.1), transparent);
+  transition: left 0.5s ease;
+}
+
+.card:hover::before { left: 100%; }
+
+.card:hover {
+  transform: translateY(-10px) scale(1.02);
+  box-shadow: 0 20px 40px var(--shadow), var(--glow);
+  border-color: var(--secondary);
+}
+
+ul li {
+  margin: 6px 0;
+  padding-left: 20px;
+  position: relative;
+  transition: var(--transition);
+}
+
+ul li:hover { transform: translateX(5px); }
+
+ul li::before {
+  content: "✔";
+  color: var(--secondary);
+  font-weight: bold;
+  position: absolute;
+  left: 0;
+  transition: var(--transition);
+}
+
+ul li:hover::before { color: var(--neon); transform: scale(1.2); }
+
+.form-box {
+  background: var(--white);
+  padding: 35px;
+  border-radius: 22px;
+  box-shadow: 0 15px 40px var(--shadow);
+  max-width: 850px;
+  margin: auto;
+  transition: var(--transition);
+  border: 1px solid rgba(31, 163, 107, 0.2);
+  backdrop-filter: blur(15px);
+}
+
+input, select {
+  width: 100%;
+  padding: 12px 14px;
+  margin-bottom: 14px;
+  border-radius: 12px;
+  border: 1px solid #ccc;
+  font-family: inherit;
+  transition: var(--transition);
+  background: rgba(255, 255, 255, 0.9);
+}
+
+input:focus, select:focus {
+  outline: none;
+  border-color: var(--secondary);
+  box-shadow: 0 0 0 2px rgba(31, 163, 107, 0.2), 0 0 10px rgba(31, 163, 107, 0.3);
+  transform: translateY(-2px);
+}
+
+button {
+  width: 100%;
+  padding: 14px;
+  border: none;
+  border-radius: 14px;
+  background: linear-gradient(135deg, var(--accent), var(--secondary));
+  color: var(--white);
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: var(--transition);
+  position: relative;
+  overflow: hidden;
+}
+
+button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+  transition: left 0.5s ease;
+}
+
+button:hover:not(:disabled)::before { left: 100%; }
+
+button:hover:not(:disabled) {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(25, 135, 84, 0.3), 0 0 20px rgba(25, 135, 84, 0.5);
+}
+
+button:disabled { opacity: 0.5; cursor: not-allowed; }
+
+#qrBox {
+  display: none;
+  text-align: center;
+  margin: 20px 0;
+  padding: 20px;
+  background: linear-gradient(135deg, #eaf7f1, rgba(31, 163, 107, 0.1));
+  border-radius: 16px;
+  border: 1px solid var(--secondary);
+  box-shadow: inset 0 0 10px rgba(31, 163, 107, 0.1);
+  animation: fadeIn 0.5s ease;
+}
+
+@keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+
+#feeText { font-weight: 600; color: var(--primary); margin-bottom: 10px; font-family: 'Orbitron', monospace; }
+
+footer {
+  background: linear-gradient(135deg, var(--accent), var(--secondary));
+  color: var(--white);
+  padding: 30px 15px;
+  text-align: center;
+  line-height: 1.8;
+  position: relative;
+}
+
+footer::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(circle, rgba(255,255,255,0.05) 1px, transparent 1px);
+  background-size: 30px 30px;
+}
+
+@media (max-width: 768px) {
+  header { padding: 50px 20px; clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%); }
+  header h1 { font-size: 28px; }
+  header h2 { font-size: 24px; }
+  section { padding: 40px 20px; }
+  .cards { grid-template-columns: 1fr; }
+  .form-box { padding: 25px; }
 }
 </style>
 </head>
@@ -113,6 +303,8 @@ footer{
 <div class="cards">
 <div class="card"><h3>Academic</h3><p>Class 5 to Class 12</p></div>
 <div class="card"><h3>Science Special</h3><p>Class 5 to 8</p></div>
+<div class="card"><h3>Special Spoken Class</h3><p>Arabic Spoken</p></div>
+<div class="card"><h3>Special Quran Class</h3><p>Tajweed Quran Karim</p></div>
 </div>
 </section>
 
@@ -166,7 +358,6 @@ footer{
 
 <input id="name" placeholder="Student Name" required>
 
-<!-- ✅ FIXED DOB INPUT -->
 <input type="tel" id="dob" placeholder="Date of Birth (DD-MM-YYYY)" maxlength="10" required>
 
 <input id="age" placeholder="Age (Auto Calculated)" readonly>
@@ -222,7 +413,6 @@ feeText=g("feeText"),paidConfirm=g("paidConfirm"),
 payment=g("payment"),proof=g("proof"),submitBtn=g("submitBtn"),
 dob=g("dob"),age=g("age");
 
-/* ✅ DOB AUTO FORMAT + AGE */
 dob.addEventListener("input",()=>{
  let v=dob.value.replace(/[^0-9]/g,"");
  if(v.length>2)v=v.slice(0,2)+"-"+v.slice(2);
@@ -246,7 +436,6 @@ dob.addEventListener("input",()=>{
  age.value=a+" years";
 });
 
-/* Course QR */
 course.onchange=()=>{
  qrBox.style.display="none";
  paidConfirm.checked=false;
@@ -270,7 +459,6 @@ payment.onchange=proof.onchange=()=>{
  submitBtn.disabled=!(payment.value&&proof.files.length&&paidConfirm.checked);
 };
 
-/* Submit */
 g("admissionForm").onsubmit=e=>{
  e.preventDefault();
  const a=parseInt(age.value);
